用户注册开始1

--- a/Application/Home/View/User/index.html
+++ b/Application/Home/View/User/index.html
@@ -26,13 +26,13 @@
 </div>
 <div class="container">
     <div class="demo">
-        <h2 class="title"><a href="http://www.sucaihuo.com/js/325.html">教程：PHP激活用户注册验证邮箱</a></h2>
+        <h2 class="title"><a href="http://www.sucaihuo.com/js/325.html">教程：PHP用户登录界面</a></h2>
 
         <form id="reg" action="__SELF__" method="post" onsubmit="return chk_form();">
             <p>用户名：<input type="text" class="input" name="username" id="user"></p>
             <p>密 &nbsp; 码：<input type="password" class="input" name="password" id="pass"></p>
             <!--<p>E-mail：<input type="text" class="input" name="email" id="email"></p>-->
-            <p><input type="submit" class="btn" value="提交注册"></p>
+            <p><input type="submit" class="btn" value="提交登录"></p>
         </form>
     </div>
 </div>
