--- a/Application/Home/View/User/register.html
+++ b/Application/Home/View/User/register.html
@@ -26,7 +26,7 @@
 </div>
 <div class="container">
     <div class="demo">
-        <h2 class="title"><a href="http://www.sucaihuo.com/js/325.html">教程：PHP激活用户注册验证邮箱</a></h2>
+        <h2 class="title"><a href="http://www.sucaihuo.com/js/325.html">教程：PHP用户注册界面</a></h2>
 
         <form id="reg" action="__SELF__" method="post" onsubmit="return chk_form();">
             <p>用户名：<input type="text" class="input" name="username" id="user"></p>
