--- a/Application/Home/View/User/index.html
+++ b/Application/Home/View/User/index.html
@@ -31,6 +31,7 @@
         <form id="reg" action="__SELF__" method="post" onsubmit="return chk_form();">
             <p>用户名：<input type="text" class="input" name="username" id="user"></p>
             <p>密 &nbsp; 码：<input type="password" class="input" name="password" id="pass"></p>
+            <p>记住密码：<input type="checkbox"  name="check" id="check"></p>
             <!--<p>E-mail：<input type="text" class="input" name="email" id="email"></p>-->
             <p><input type="submit" class="btn" value="提交登录"></p>
         </form>
